# Vladislav_Test_Project

./: .gitignore  README.md
my_service/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
my_service/boards/: nrf52840dk_nrf52840.overlay
my_service/services/: my_service.c  my_service.h
my_service/src/: main.c
